--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,22 +11,8 @@ services:
     volumes:
       - ./backend:/var/www/html
       - backend-storage:/var/www/html/storage/app
-      - backend-database:/var/www/html/database
     ports:
-      - "${BACKEND_PORT:-8000}:8000"
-    environment:
-      - APP_NAME=${APP_NAME}
-      - APP_ENV=${APP_ENV}
-      - APP_KEY=${APP_KEY}
-      - APP_DEBUG=${APP_DEBUG}
-      - APP_URL=${APP_URL}
-      - DB_CONNECTION=${DB_CONNECTION}
-      - DB_DATABASE=${DB_DATABASE}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
-      - FRONTEND_URL=${FRONTEND_URL}
-      - QUEUE_CONNECTION=${QUEUE_CONNECTION}
-      - SESSION_DRIVER=${SESSION_DRIVER}
-      - SESSION_LIFETIME=${SESSION_LIFETIME}
+      - "8000:8000"
     networks:
       - ride-network
     healthcheck:
@@ -49,17 +35,6 @@ services:
     volumes:
       - ./backend:/var/www/html
       - backend-storage:/var/www/html/storage/app
-      - backend-database:/var/www/html/database
-    environment:
-      - APP_NAME=${APP_NAME}
-      - APP_ENV=${APP_ENV}
-      - APP_KEY=${APP_KEY}
-      - APP_DEBUG=${APP_DEBUG}
-      - APP_URL=${APP_URL}
-      - DB_CONNECTION=${DB_CONNECTION}
-      - DB_DATABASE=${DB_DATABASE}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
-      - QUEUE_CONNECTION=${QUEUE_CONNECTION}
     networks:
       - ride-network
 
@@ -72,11 +47,11 @@ services:
     restart: unless-stopped
     volumes:
       - ./frontend:/app
-      - /app/node_modules
+      - frontend-node-modules:/app/node_modules
     ports:
-      - "${FRONTEND_PORT:-3000}:3000"
+      - "3000:3000"
     environment:
-      - VITE_API_URL=${APP_URL}
+      - VITE_API_URL=http://localhost:8000
     networks:
       - ride-network
     healthcheck:
@@ -95,5 +70,5 @@ networks:
 volumes:
   backend-storage:
     driver: local
-  backend-database:
+  frontend-node-modules:
     driver: local
